--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登录</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=716c162888e90c820d69&redirect_uri=http://127.0.1.1:8080/callback&scope=user&state=1">登录</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我的<span class="caret"></span></a>
                     <ul class="dropdown-menu">
